# yral-backend-canister

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  canister_ids.json  dfx.json  test_profile_pics.md  todo.md
.devcontainer/: Dockerfile  devcontainer.json  setup.nu  setup.sh
.github/: dependabot.yml
.github/workflows/: all-canisters-test-suite-on-any-push.yml  all_canisters_test_suite_on_any_push.yml  canister-snapshot.yml  canister_snapshot.yml  configure_bot_accounts.yml  create-release-on-tag-push.yml  create_release_on_tag_push.yml  prebuild-and-cache-devcontainer-on-merge-to-main.yml  project-workflow.yml  publish_image.yml  set_ai_influencers.yml
docs/work/: 2025-07-29-001-feature-video-generation-tracking-rate-limits.md
scripts/: candid_generator.sh  generate-candid.sh  install-dependencies.sh  install-dfx.sh  release-and-submit-proposals.sh  run-canister-test-suite.sh  upgrade_ic_repl.sh
scripts/ci/: add_pr_to_project.sh  canister_snapshot.sh  publish_image.sh  release_and_submit_proposals.sh
src/canister/rate_limits/: Cargo.toml  can.did
src/canister/rate_limits/src/: lib.rs  types.rs
src/canister/rate_limits/src/api/: mod.rs  rate_limit_checks.rs  rate_limit_config.rs  rate_limit_management.rs  video_gen_tracking.rs
src/canister/rate_limits/src/canister_lifecycle/: mod.rs
src/canister/rate_limits/src/data_model/: memory.rs  mod.rs  tests.rs
src/canister/rate_limits/src/utils/: mod.rs
src/canister/user_info_service/: Cargo.toml  can.did
src/canister/user_info_service/src/: lib.rs
src/canister/user_info_service/src/api/: accept_new_user_registration.rs  convert_to_bot_account.rs  delete_user_info.rs  follow_user.rs  get_followers.rs  get_following.rs  get_profile_details.rs  get_profile_details_v4.rs  get_session_type.rs  mod.rs  register_new_user.rs  subscription_plan.rs  unfollow_user.rs  update_last_access_time.rs  update_profile_details.rs  update_session_type.rs
src/canister/user_info_service/src/api/canister_lifecycle/: mod.rs
src/canister/user_info_service/src/api/canister_lifecyle/: init.rs  mod.rs  post_upgrade.rs  pre_upgrade.rs
src/canister/user_info_service/src/data_model/: memory.rs  mod.rs
src/canister/video_metadata_store/: Cargo.toml
src/canister/video_metadata_store/src/: lib.rs
src/lib/ic_canister_snapshot/: Cargo.toml  queries.sql
src/lib/ic_canister_snapshot/src/: fetch.rs  lib.rs  query.rs
(+195 files in other folders)
