[package]
name = "rate_limits"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
serde = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-stable-structures = { workspace = true }
ciborium = { workspace = true }
shared_utils = { workspace = true }
serde_json = { workspace = true }
serde_json_any_key = "2.0.0"
futures = { workspace = true }