[package]
name = "user_info_service"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]


[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
shared_utils = { workspace = true }
serde = { workspace = true }
ic-stable-structures = { workspace = true }
ciborium = { workspace = true }

[dev-dependencies]
test_utils = { workspace = true }

